--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-    <h3>Take a picture of your target</h1>
-    <input type="file" accept="image/*" capture="camera" id="camera">
-    <img id="frame">
+    <div class="container">
+      <h3>Take a picture of your target</h3>
+      <label class="btn btn-default btn-primary">Open Camera
+        <input type="file" accept="image/*" capture="camera" id="camera" style="display: none;">
+      </label>
+      <img id="frame">
+    </div>
     <script>
       var camera = document.getElementById('camera');
       var frame = document.getElementById('frame');
