--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-xs-10 offset-xs-1">
+        <div class="col-12">
           <h3>Take a picture of your target</h3>
           <label class="btn btn-default btn-primary">Open Camera
             <input type="file" accept="image/*" capture="camera" id="camera" style="display: none;">
