--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <img id="frame">
         </div>
       </div>
+    </div>
     <script>
       var camera = document.getElementById('camera');
       var frame = document.getElementById('frame');
@@ -26,10 +27,9 @@
       camera.addEventListener('change', function(e) {
         var file = e.target.files[0]; 
         // Do something with the image file.
-        frame.src = URL.createObjectURL(file);
-  });
+        //frame.src = URL.createObjectURL(file);
+      });
     </script>
-
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
