--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
       camera.addEventListener('change', function(e) {
         var file = e.target.files[0]; 
-        // Do something with the image file.
-        //frame.src = URL.createObjectURL(file);
+         Do something with the image file.
+        frame.src = URL.createObjectURL(file);
       });
     </script>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
