--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       camera.addEventListener('change', function(e) {
         var file = e.target.files[0]; 
-         Do something with the image file.
+         //Do something with the image file.
         frame.src = URL.createObjectURL(file);
       });
     </script>
