--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="row">
         <div class="col-12" id="photo">
-          <img id="frame">
+          <img id="frame" width="200px" height="200px">
         </div>
       </div>
       <div class="row">
