--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <span id="result">No Match</span>
+          <span id="result"></span>
         </div>
       </div>
     </div>
