--- a/registration.html
+++ b/registration.html
@@ -1,6 +1,6 @@
 
 <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-<script src="registration.css"></script>
+<link href="registration.css" rel="stylesheet">
 
 <div class=dossier>
 <label>State your name.<input type="text"></label>
